<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Museumsapp</string>
    <string name="auswahl1">Werke</string>
    <string name="auswahl2">Spiele</string>
    <string name="auswahl3">Kontakt</string>
    <string name="auswahl4">Museumskarte</string>
    <string name="auswahl5">Gästebuch</string>
    <string name="auswahl6">Anfahrt</string>
    <string name="auswahl7">Angebote und Preise</string>
    <string name="menu1">Anmelden</string>
    <string name="menu2">Kontaktdaten</string>
    <string name="menu3">Rechtliches</string>
    <string name="werk1">A</string>
    <string name="werk2">B</string>
    <string name="werk3">C</string>
    <string name="werk4">D</string>
    <string name="werk5">E</string>

    <!-- Für das Gästebuch -->
    <string name="action_settings2">Einstellungen</string>


    <!-- Für die Spiele -->
    <string name="spielelabel">Spiele</string>
    <!-- Für das Quiz -->
    <string name="quizlabel">Minigame: Quiz</string>
    <string name="quiz_beschreibung">Stellen sie ihr Wissen über Kunst, Künstler und Kunstgeschichte auf die Probe!
    \nDie Fragen beziehen sich auf Informationen und Werke unserer aktuellen Ausstellungen.
    \nViel Spaß!</string>
    <!-- Für Artsweeper -->
    <string name="over_flag_limit_error">Flaggenlimit erreicht. Entfernen sie bitte zuerst eine Flagge.</string>
    <string name="uncover_tile_error">Sie müssen eine Flagge entfernen.</string>
    <string name="board_initialization_error">Es trat ein Fehler beim Starten des Spiels auf.</string>
    <string name="finish_button">auflösen</string>
    <string name="reset_button">erneut</string>
    <string name="game_reset_error">Fehler beim Zurücksetzen des Spiels.</string>
    <string name="win_message">Sie haben gewonnen!</string>
    <string name="loss_message">Verloren!</string>
    <!-- Für das Puzzle -->
    <string name="action_new_game">Neues Spiel</string>
    <string name="action_help">Hilfe</string>
    <!-- Für das Memory -->
    <string name="state_ready">Starten</string>
    <string name="state_pause">Pausiert</string>
    <string name="state_game_over">Ausgezeichnet!</string>
    <string name="menu_new_game">Neues Spiel</string>
    <string name="menu_exit">Beenden</string>
    <string name="menu_resume">Weiter</string>
    <string name="solved_in">Gelöst in</string>
    <string name="minute">Minute</string>
    <string name="minutes">Minuten</string>
    <string name="second">sekunde</string>
    <string name="seconds">sekunden</string>

    <!-- Für KontaktActivity -->
    <string name="kontakt_infos">Museum 42 \n \nKontakt: \nFrau Wess \nMuseum 42 \nMuseumstraße 42
    \n42424 Ort \n\n040 42 42 42 \ncontact@museum42.com \n\nÖffnungszeiten: \nMo - So: immer</string>

    <!-- Für ServiceActivity -->
    <string name="service_angebot">Hier finden sie unsere aktuellen Angebote.</string>
    <string name="service_preis">Hier finden sie unsere aktuellen Preise.</string>
    <string name="service_kontakt">Sie haben Fragen oder Anregungen?\nKontaktieren Sie uns. Wir freuen uns auf Sie!</string>
    <string name="service_head">Angebote und Preise</string>
    <string name="service_verlinkung">Sagt ihnen eines unserer Angebote zu? \nDann zögern sie nicht uns zu kontaktieren:</string>
    <string name="freuen_service">Wir freuen uns auf ihren Besuch!</string>

    <!-- Für PreisActivity -->
    <string name="preis">Preise</string>
    <string name="eintritt">Eintritt:</string>
    <string name="preis_aktuell">Wird geladen...</string>

    <!-- Für AngebotActivity -->
    <string name="angebot">Angebote</string>
    <string name="angebot_liste">Aktuelle Angebote:</string>
    <string name="angebote_aktuell">Wird geladen...</string>

    <!-- SuchActivity -->
    <string name="suchtext">Ihr Suchbegriff</string>

    <!-- ImpressumActivity -->
    <string name="impressum">"Impressum \n
Hamburger Museum
(Hamburger Museum von Meisterwerken der Naturwissenschaft und Technik)
Museumsinsel 1
D-80538 Hamburger
Postfachadresse:
Hamburger Museum
D-80306 Hamburger
Telefon: (089) 3579 1

E-Mail: Hamburger.Museum.de

Das Hamburger Museum ist eine Anstalt öffentlichen Rechts mit Sitz in Hamburger.
Vertretungsberechtigt ist: Generaldirektor Prof. Dr. Franz Müller
Gewähr und Haftungshinweis
Alle Angaben und Inhalte dieser App und solcher, auf die mittels Hyperlink verwiesen wird, wurden sorgfältig geprüft und entsprechen dem jeweils angegebenen Stand. Trotz aller Sorgfalt kann eine Haftung oder Garantie für die Vollständigkeit, Richtigkeit und Aktualität der Angaben nicht übernommen werden.
Trotz sorgfältiger inhaltlicher Kontrolle übernehmen wir keine Haftung für die Inhalte von Websites, auf die von der Website des Museums verlinkt wird. Für den Inhalt der verlinkten Seiten sind ausschließlich deren Betreiber verantwortlich.

Copyright
Die Inhalte der App des Deutschen Museums dürfen zu nichtkommerziellen, wissenschaftlichen und schulischen Zwecken verwendet werden, sofern keine Rechte Dritter verletzt werden und sofern keine Veröffentlichung in Publikationen, in Datenbanken oder im Internet erfolgt.
Alle anderen Verwendungen bedürfen einer schriftlichen Genehmigung des Museums. Ausgenommen von der Genehmigungspflicht sind speziell als "Pressetexte" gekennzeichnete Seiten mit den zugehörigen Aufnahmen, soweit sie unter Einhaltung der dort genannten Bedingungen verwendet werden. (Genehmigungen über die Pressestelle des Deutschen Museums.)
Für die Verwendung von Materialien des Hamburger Museum, die nicht von dieser Website stammen, gelten eigene Bestimmungen (Hausordnung, Bibliotheksordnung, Archivregelungen u.a.)
Hinweis:
Fotografien, z.B. von Objekten, können über die Bildstelle des Hamburger Museum bezogen werden.
"</string>

    <!-- Gästebuch -->
    <string name="textfeld1">Dein Name</string>
    <string name="textfeld2">Deine Nachricht</string>
    <string name="title_activity_entries">Einträge</string>
    <string name="title_activity_guestbook_options">Gästebuch</string>
    <string name="title_activity_guestbook_write">Nachricht verfassen</string>
    <string name="abschicken">Abschicken</string>
    <string name="textview">Wird geladen...</string>
    <string name="regelntitle">Regeln</string>
    <string name="regeln">"Deine Meinung ist uns wichtig. Damit wir deine Beiträge im Gästebuch veröffentlichen können, musst du dich aber bitte an folgende Regeln halten: \n
Der Ton im Gästebuch sollte immer höflich und von gegenseitigem Respekt geprägt sein.\n
Beleidigungen, Beschimpfungen und Ausdrücke werden im Gästebuch nicht geduldet. Denke daran, dass auch jüngere Kinder diese Seite besuchen.\n
Beiträge, die Werbung zum Inhalt haben, sind Spam. Bitte keine Links zu anderen Homepages! Sie werden gelöscht.\n
Natürlich dürft ihr euch gegenseitig Grüße ausrichten. Aber private "nterhaltungen sind im Gästebuch nicht erwünscht.\n
Sollten wir uns dagegen entscheiden, Dein Eintrag zu veröffentlichen, erfolgt keine automatische Benachrichtigung unsererseits.\n
Für die Inhalte ist allein der Veröffentlicher verantwortlich. Der Betreiber behält sich vor, Informationen von der Veröffentlichung auszuschließen,
        die öffentlich Anstoß erregen, Dritte verunglimpfen oder gegen geltendes Recht verstoßen.\n
Beiträge, die den Regeln nicht entsprechen, werden umgehend gelöscht.\n \n Quelle: http://www.rsg-le.de/gaestebuch/gaestebuch-regeln.html"</string>

    <!-- Für die Werke -->
    <string name="uploadNotPossible">Wählen Sie bitte ein Bild und füllen Sie alle Felder aus!</string>
    <string name="werkTitel">Titel des Werks</string>
    <string name="werkKuenstler">Künstlername</string>
    <string name="werkBeschreibung">Beschreibung</string>
    <string name="addWerk">Füge Werk hinzu</string>
    <string name="addComment">Füge Kommentar hinzu</string>
    <string name="commentRules">Kommentarregeln</string>
    <string name="searchWerk">Suche nach einem Werk</string>
    <string name="commentWerk">Kommentare</string>
    <string name="removeWerk">Entferne Werk</string>
    <string name="updateWerk">Bearbeite Werk</string>
    <string name="createWerk">Werk erstellen</string>
    <string name="uploadWerk">Werk wird hochgeladen</string>
    <string name="werkeDbRef">Werke</string>
    <string name="werkeStorage">Werke_Bilder</string>
    <string name="titelDb">titel</string>
    <string name="kuenstlerDb">kuenstler</string>
    <string name="beschreibungDb">beschreibung</string>
    <string name="bildDb">bildUrl</string>
    <string name="loescheWerkAlertTitel">Lösche Werk</string>
    <string name="loescheWerkAlertText">Wollen Sie dieses Werk wirklich löschen?</string>

    <string name="title_activity_hauptmenu">HauptmenuActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_kommentar_regeln">KommentarRegelnActivity</string>
    <string name="title_activity_such">SuchActivity</string>
    <string name="title_activity_main">Museumapp</string>

    <string name="action_settings">Settings</string>


    <string name="title_activity_login">temp</string>
    <string name="prompt_email">temp</string>
    <string name="prompt_password">temp</string>
    <string name="action_sign_in_short">temp</string>
    <string name="action_sign_in">temp</string>
</resources>
