<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.seamuseum.auswahlelement.service.PreisActivity"
    tools:layout_editor_absoluteY="75dp"
    tools:layout_editor_absoluteX="0dp">

    <TextView
        android:id="@+id/preis_hl"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:gravity="center"
        android:text="@string/preis"
        android:textSize="25sp"
        android:textStyle="bold"
        tools:text="@string/preis"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintHorizontal_bias="0.0" />

    <TextView
        android:id="@+id/eintritt"
        android:layout_width="61dp"
        android:layout_height="22dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/eintritt"
        tools:text="@string/eintritt"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="54dp"
        app:layout_constraintTop_toBottomOf="@+id/preis_hl"
        app:layout_constraintHorizontal_bias="0.0" />

    <TextView
        android:id="@+id/preise_aktuell"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:textSize="18sp"
        tools:text="@string/preis_aktuell"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/eintritt"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/freuen"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/freuen"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:gravity="center"
        android:textStyle="bold"
        android:text="@string/freuen_service"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:text="@string/freuen_service" />

</android.support.constraint.ConstraintLayout>
